Added mechanism for shared library, like javagat has